# jira-env-simulation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  task_registry.py  tasks.py  tasks_runner.py  test_local_env.py
graders/: __init__.py  assignment_guard_grader.py  common.py  easy_grader.py  hard_grader.py  medium_grader.py
server/: __init__.py  app.py  grader.py  jira_environment.py
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tasks/: __init__.py  definitions.py  graders.py
