[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-env-simulation"
version = "0.1.0"
description = "A simplified Jira-like OpenEnv environment for ticket resolution"
authors = [{ name = "Chirag" }]
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["jira_env_simulation", "jira_env_simulation.server"]
package-dir = { "jira_env_simulation" = ".", "jira_env_simulation.server" = "server" }
